# vorto

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: release.yml
assets/queries/bash/: indents.scm
assets/queries/c/: indents.scm
assets/queries/cpp/: indents.scm
assets/queries/css/: indents.scm
assets/queries/go/: highlights.scm  indents.scm
src/: action.rs  app.rs  buffer_ref.rs  config.rs  editor.rs  effect.rs  event.rs  format.rs  fuzzy.rs  highlight.rs  keymap.rs  languages.rs  log.rs  lsp.rs  lsp_coordinator.rs  main.rs  mode.rs  preview.rs  prompt.rs  search.rs  text_width.rs  ui.rs  vcs.rs
src/app/: buffer_list.rs  completion.rs  copilot.rs  eval.rs  input.rs  jump.rs  lsp_apply.rs  lsp_coordinator.rs  lsp_ops.rs  lsp_request.rs  mod.rs  open.rs  pane.rs  runtime.rs  signature.rs  sleeping.rs  status.rs  toast.rs  types.rs  workers.rs
src/app/eval/: mod.rs  (+2 more)
src/config/: command.rs  cursor.rs  editor.rs  keymap.rs  keys.rs  languages.rs  mod.rs
src/copilot/: mod.rs
src/editor/: cursor.rs  history.rs  inline_suggestion.rs  insert.rs  mod.rs  motion.rs  ops.rs  search.rs  substitute.rs  text_object.rs  vcs_link.rs
src/finder/: fuzzy.rs  mod.rs  preview.rs
src/grammar/: assets.rs  build.rs  cli.rs  mod.rs  recipe.rs
src/lsp/: codec.rs  coordinator.rs  edits.rs  mod.rs  parse.rs  root.rs  types.rs  uri.rs
src/syntax/: highlight.rs  loader.rs  mod.rs  theme.rs
src/ui/: buffer.rs  code_action.rs  completion.rs  fuzzy.rs  hints.rs  hover.rs  lsp_status.rs  mod.rs  signature.rs  status.rs  toast.rs
(+42 files in other folders)
