[package]
name = "vorto"
version = "0.9.7"
edition = "2024"
description = "A terminal text editor with tree-sitter syntax highlighting and LSP support"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/shka-k/vorto"
homepage = "https://github.com/shka-k/vorto"
keywords = ["editor", "terminal", "tui", "tree-sitter", "lsp"]
categories = ["text-editors", "command-line-utilities"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tree-sitter = "0.26"
libloading = "0.8"
flate2 = "1"
include_dir = "0.7"
arboard = "3"
time = { version = "0.3", features = ["formatting", "local-offset"] }
unicode-width = "0.1"
